--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -68,7 +68,7 @@
 
   </div>
 
-  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es5,Promise,fetch"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es5%2Cfetch%2CPromise"></script>
   <script src="../lib/require_2.3.6.min.js"></script>
   <script>
   var createSolutionFcn = publishSolutionFcn = null;
@@ -108,25 +108,26 @@
   requirejs.config({
     baseUrl: './',
     paths: {  // for the benefit of called libraries
-      '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.17.0/dist/umd/auth.umd',
+      // common dependencies
+      '@esri/arcgis-rest-auth': '../demo_common/node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd',
       '@esri/arcgis-rest-feature-service-admin':
-        'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.17.0/dist/umd/feature-service-admin.umd',
-      '@esri/arcgis-rest-groups': 'https://unpkg.com/@esri/arcgis-rest-groups@1.17.0/dist/umd/groups.umd',
-      '@esri/arcgis-rest-items': 'https://unpkg.com/@esri/arcgis-rest-items@1.17.0/dist/umd/items.umd',
-      '@esri/arcgis-rest-request': 'https://unpkg.com/@esri/arcgis-rest-request@1.17.0/dist/umd/request.umd',
-      '@esri/arcgis-rest-sharing': 'https://unpkg.com/@esri/arcgis-rest-sharing@1.17.0/dist/umd/sharing.umd'
+        '../demo_common/node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd',
+      '@esri/arcgis-rest-groups': '../demo_common/node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd',
+      '@esri/arcgis-rest-sharing': '../demo_common/node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd',
+      // local dependencies
+      '@esri/arcgis-rest-items': '../publish/node_modules/@esri/arcgis-rest-items/dist/umd/items.umd',
+      '@esri/arcgis-rest-request': '../publish/node_modules/@esri/arcgis-rest-request/dist/umd/request.umd',
+      '@esri/solution-creator': '../publish/node_modules/@esri/solution-creator/dist/umd/creator.umd'
     }
   });
 
   requirejs([
-    '@esri/arcgis-rest-items',
     '@esri/arcgis-rest-request',
     '@esri/solution-creator',
     '../demo_common/common',
     '../demo_common/polyfills'
   ], function (
-    arcgis_rest_items,
-    arcgis_rest_request,
+    arcgisRestRequest,
     arcgisSolution,
     demoCommon
   ) {
@@ -171,7 +172,7 @@
         document.getElementById('destPortal').value + '/sharing/rest');
 
       // Get the source's organization URL for creating links to source items
-      arcgis_rest_request.getPortal(null, sourceRequestOptions)
+      arcgisRestRequest.getPortal(null, sourceRequestOptions)
       .then(
         function (response) {
           var orgUrl = 'https://' + response.urlKey + '.' + response.customBaseUrl + '/home/';
