Only have package.json in demo folders for simplification

--- a/demos/deploy/index.html
+++ b/demos/deploy/index.html
@@ -87,15 +87,15 @@
     baseUrl: './',
     paths: {  // for the benefit of called libraries
       // common dependencies
-      '@esri/arcgis-rest-auth': '../demo_common/node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd',
+      '@esri/arcgis-rest-auth': '../deploy/node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd',
       '@esri/arcgis-rest-feature-service-admin':
-        '../demo_common/node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd',
-      '@esri/arcgis-rest-groups': '../demo_common/node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd',
-      '@esri/arcgis-rest-sharing': '../demo_common/node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd',
+        '../deploy/node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd',
+      '@esri/arcgis-rest-groups': '../deploy/node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd',
+      '@esri/arcgis-rest-sharing': '../deploy/node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd',
       // local dependencies
-      '@esri/arcgis-rest-items': '../publish/node_modules/@esri/arcgis-rest-items/dist/umd/items.umd',
-      '@esri/arcgis-rest-request': '../publish/node_modules/@esri/arcgis-rest-request/dist/umd/request.umd',
-      '@esri/solution-creator': '../publish/node_modules/@esri/solution-creator/dist/umd/creator.umd'
+      '@esri/arcgis-rest-items': '../deploy/node_modules/@esri/arcgis-rest-items/dist/umd/items.umd',
+      '@esri/arcgis-rest-request': '../deploy/node_modules/@esri/arcgis-rest-request/dist/umd/request.umd',
+      '@esri/solution-creator': '../deploy/node_modules/@esri/solution-creator/dist/umd/creator.umd'
     }
   });
 
