--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -109,11 +109,11 @@
     baseUrl: './',
     paths: {  // for the benefit of called libraries
       // common dependencies
-      '@esri/arcgis-rest-auth': '../demo_common/node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd',
+      '@esri/arcgis-rest-auth': '../publish/node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd',
       '@esri/arcgis-rest-feature-service-admin':
-        '../demo_common/node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd',
-      '@esri/arcgis-rest-groups': '../demo_common/node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd',
-      '@esri/arcgis-rest-sharing': '../demo_common/node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd',
+        '../publish/node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd',
+      '@esri/arcgis-rest-groups': '../publish/node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd',
+      '@esri/arcgis-rest-sharing': '../publish/node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd',
       // local dependencies
       '@esri/arcgis-rest-items': '../publish/node_modules/@esri/arcgis-rest-items/dist/umd/items.umd',
       '@esri/arcgis-rest-request': '../publish/node_modules/@esri/arcgis-rest-request/dist/umd/request.umd',
