move the fs functions into regions for my sanity 2

--- a/demos/deploy/index.html
+++ b/demos/deploy/index.html
@@ -26,10 +26,10 @@
 
     <div class="section">
       <div class="section-title">Credentials in destination organization</div>
-      <label for="destUsername">Username:</label> <input type="text" id="destUsername">
-      <label for="destPassword">Password:</label> <input type="password" id="destPassword">
+      <label for="destUsername">Username:</label> <input type="text" id="destUsername" value="john4818">
+      <label for="destPassword">Password:</label> <input type="password" id="destPassword" value="password2">
       <label for="destPortal">Portal:</label>
-      <input type="text" id="destPortal" style="width:256px" placeholder="https://myorg.maps.arcgis.com">
+      <input type="text" id="destPortal" style="width:256px" placeholder="https://myorg.maps.arcgis.com" value="https://stategovernment.maps.arcgis.com">
     </div>
 
     <div id="availableSolutions" class="section">
