--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -26,16 +26,16 @@
 
     <div class="section">
       <div class="section-title">Credentials in source organization for Solution items</div>
-      <label for="srcUsername">Username:</label> <input type="text" id="srcUsername">
-      <label for="srcPassword">Password:</label> <input type="password" id="srcPassword">
+      <label for="srcUsername">Username:</label> <input type="text" id="srcUsername" value="LocalGovDeployChrisF">
+      <label for="srcPassword">Password:</label> <input type="password" id="srcPassword" value="testtest123">
       <label for="srcPortal">Portal:</label>
-      <input type="text" id="srcPortal" style="width:256px" placeholder="https://myorg.maps.arcgis.com">
+      <input type="text" id="srcPortal" style="width:256px" placeholder="https://myorg.maps.arcgis.com" value="https://localdeployment.maps.arcgis.com">
       <br/><br/>
       <div class="section-title">Credentials in destination organization for Solution template</div>
-      <label for="destUsername">Username:</label> <input type="text" id="destUsername">
-      <label for="destPassword">Password:</label> <input type="password" id="destPassword">
+      <label for="destUsername">Username:</label> <input type="text" id="destUsername" value="john4818">
+      <label for="destPassword">Password:</label> <input type="password" id="destPassword" value="password2">
       <label for="destPortal">Portal:</label>
-      <input type="text" id="destPortal" style="width:256px" placeholder="https://myorg.maps.arcgis.com">
+      <input type="text" id="destPortal" style="width:256px" placeholder="https://myorg.maps.arcgis.com" value="https://stategovernment.maps.arcgis.com">
     </div>
 
     <div class="section">
