--- a/packages/common/examples/getItemInfo/JavaScript/index.html
+++ b/packages/common/examples/getItemInfo/JavaScript/index.html
@@ -64,7 +64,8 @@
             return;
           }
 
-          const defaultPortalUrl = "https://www.arcgis.com/sharing";
+          const defaultPortalUrl = "https://www.arcgis.com";
+          const defaultPortalSharingUrl = "https://www.arcgis.com/sharing";
           var usOptions = {};
           var destinationUserSession = new auth.UserSession(usOptions);
           var requestOptions = { authentication: destinationUserSession };
@@ -80,26 +81,33 @@
               const [itemBase, itemData, resources] = responses;
               let html = "";
 
-              html += "<h3>" + itemBase.type + " \"" + itemBase.title + "\" (" + itemBase.id + ")</h3>";
+              html += "<h3>" + itemBase.type + ' "' + itemBase.title +
+                '" (<a href="' + defaultPortalUrl + '/home/item.html?id=' + itemBase.id + '" target="_blank">' +
+                itemBase.id + '</a>)</h3>';
+                "\" (" +
+                defaultPortalUrl + "/home/item.html?id=" + itemBase.id + ")</h3>";
 
-              html += "<table style=\"width:100%\"><tr>"
-                + "<td>Item Json</td>"
-                + "<td>Data Json</td>"
-                + "</tr><tr>"
-                + "<td><textarea rows=\"10\" style=\"width:99%;font-size:x-small\">"
-                + JSON.stringify(itemBase,null,2)
-                + "</textarea></td>"
-                + "<td><textarea rows=\"10\" style=\"width:99%;font-size:x-small\">"
-                + JSON.stringify(itemData,null,2)
-                + "</textarea></td>"
-                + "</tr></table>";
+              html +=
+                '<table style="width:100%"><tr>' +
+                '<td><a href="' + defaultPortalSharingUrl + '/rest/content/items/' + itemBase.id +
+                '?f=json" target="_blank">Item Json</a></td>' +
+                '<td><a href="' + defaultPortalSharingUrl + '/rest/content/items/' + itemBase.id +
+                '/data?f=json" target="_blank">Data Json</a></td>' +
+                "</tr><tr>" +
+                '<td><textarea rows="10" style="width:99%;font-size:x-small">' +
+                JSON.stringify(itemBase, null, 2) +
+                "</textarea></td>" +
+                '<td><textarea rows="10" style="width:99%;font-size:x-small">' +
+                JSON.stringify(itemData, null, 2) +
+                "</textarea></td>" +
+                "</tr></table>";
 
               // Figure out URLs to the resource information
               const resourceNames = resources.resources.map(
                 resourceDetail => resourceDetail.resource
               );
               const itemFilePaths = solutionCommon.generateSourceItemFilePaths(
-                defaultPortalUrl,
+                defaultPortalSharingUrl,
                 itemId,
                 itemBase.thumbnail,
                 resourceNames
@@ -113,8 +121,15 @@
               );
               const thumbnailName =
                 thumbnailFilePath[0].url.substring(thumbnailFilePath[0].url.indexOf("/info/") + "/info/".length);
-              html += "<img src=\"" + thumbnailFilePath[0].url + "\" style=\"max-width:256px\"/> "
-                + "<a href=\"" + thumbnailFilePath[0].url + "\" target=\"_blank\">" + thumbnailName + "</a><br/>";
+              html +=
+                '<img src="' +
+                thumbnailFilePath[0].url +
+                '" style="max-width:256px"/> ' +
+                '<a href="' +
+                thumbnailFilePath[0].url +
+                '" target="_blank">' +
+                thumbnailName +
+                "</a><br/>";
               html += "</p>";
 
               // Extract the metadata URL and see if it exists
@@ -123,7 +138,7 @@
               const metadataFilePath = itemFilePaths.filter(
                 filePathInfo => filePathInfo.url.indexOf(marker) >= 0
               );
-              html += "<div id=\"metadataOutput\"></div>";
+              html += '<div id="metadataOutput"></div>';
               const requestOptionsNonJson = {
                 ...requestOptions,
                 params: {
@@ -133,9 +148,9 @@
               request.request(metadataFilePath[0].url, requestOptionsNonJson).then(
                 metadata => {
                   document.getElementById("metadataOutput").innerHTML =
-                    "<textarea rows=\"10\" style=\"width:99%;font-size:x-small\">"
-                    + metadata
-                    + "</textarea>";
+                    '<textarea rows="10" style="width:99%;font-size:x-small">' +
+                    metadata +
+                    "</textarea>";
                 },
                 () => {
                   document.getElementById("metadataOutput").innerHTML = "<i>no metadata</i>"
@@ -152,8 +167,15 @@
               resourceFilePaths.forEach(
                 filePathInfo => {
                   const name = filePathInfo.url.substr(filePathInfo.url.indexOf(marker) + marker.length);
-                  html += "<img src=\"" + filePathInfo.url + "\" style=\"max-width:256px\"/> "
-                  + "<a href=\"" + filePathInfo.url + "\" target=\"_blank\">" + name + "</a><br/>";
+                  html +=
+                    '<img src="' +
+                    filePathInfo.url +
+                    '" style="max-width:256px"/> ' +
+                    '<a href="' +
+                    filePathInfo.url +
+                    '" target="_blank">' +
+                    name +
+                    "</a><br/>";
                 }
               );
               html += "</p>";
