Added awareness of missing data section to getItemInfo example

--- a/packages/common/examples/getItemInfo/JavaScript/index.html
+++ b/packages/common/examples/getItemInfo/JavaScript/index.html
@@ -76,7 +76,11 @@
           const resourcesDef = portal.getItemResources(itemId, requestOptions);
 
           // tslint:disable-next-line: no-floating-promises
-          Promise.all([itemBaseDef, itemDataDef, resourcesDef]).then(
+          Promise.all([
+            itemBaseDef,
+            itemDataDef.catch(() => null),
+            resourcesDef
+          ]).then(
             responses => {
               const [itemBase, itemData, resources] = responses;
               let html = "";
