--- a/packages/common/examples/getItemInfo/JavaScript/index.html
+++ b/packages/common/examples/getItemInfo/JavaScript/index.html
@@ -41,9 +41,9 @@
 
     require.config({
       paths: {
-        "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.3.0/dist/umd/auth.umd.min",
-        "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.3.0/dist/umd/portal.umd.min",
-        "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.3.0/dist/umd/request.umd.min",
+        "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.4.0/dist/umd/auth.umd.min",
+        "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.4.0/dist/umd/portal.umd.min",
+        "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.4.0/dist/umd/request.umd.min",
         "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.0/dist/umd/common.umd.min"
       }
     });
@@ -59,56 +59,128 @@
           document.getElementById("input").style.display = "none";
           document.getElementById("output").style.display = "block";
 
-          if (!itemId) {
-            document.getElementById("output").innerHTML = "<span style=\"color:red\">Item's ID is not defined</span>";
-            return;
-          }
+          getItemInfo(itemId).then(
+            info => {
+              document.getElementById("output").innerHTML = info;
+            },
+            error => {
+              document.getElementById("output").innerHTML = "<span style=\"color:red\">Item's ID is not defined</span>";
+            }
+          );
+        }
 
-          const defaultPortalUrl = "https://www.arcgis.com";
-          const defaultPortalSharingUrl = "https://www.arcgis.com/sharing";
-          var usOptions = {};
-          var destinationUserSession = new auth.UserSession(usOptions);
-          var requestOptions = { authentication: destinationUserSession };
+        //------------------------------------------------------------------------------------------------------------//
+        function getItemInfo(itemId) {
+          return new Promise((resolve, reject) => {
+            if (!itemId) {
+              reject("Item's ID is not defined");
+              return;
+            }
 
-          // Get the item base, data, and resources
-          const itemBaseDef = solutionCommon.getItem(itemId, requestOptions);
-          const itemDataDef = solutionCommon.getItemData(itemId, requestOptions);
-          const resourcesDef = portal.getItemResources(itemId, requestOptions);
+            const defaultPortalUrl = "https://www.arcgis.com";
+            const defaultPortalSharingUrl = "https://www.arcgis.com/sharing";
+            const usOptions = {};
+            const destinationUserSession = new auth.UserSession(
+              usOptions
+            );
 
-          // tslint:disable-next-line: no-floating-promises
-          Promise.all([
-            itemBaseDef,
-            itemDataDef.catch(() => null),
-            resourcesDef
-          ]).then(
-            responses => {
-              const [itemBase, itemData, resources] = responses;
-              let html = "";
+            // Get the item base, data, and resources
+            const itemBaseDef = solutionCommon.getItem(itemId, destinationUserSession);
+            const itemDataDef = solutionCommon.getItemData(itemId, destinationUserSession);
+            const resourcesDef = portal.getItemResources(itemId, destinationUserSession);
 
-              html += "<h3>" + itemBase.type + ' "' + itemBase.title +
-                '" (<a href="' + defaultPortalUrl + '/home/item.html?id=' + itemBase.id + '" target="_blank">' +
-                itemBase.id + '</a>)</h3>';
-                "\" (" +
-                defaultPortalUrl + "/home/item.html?id=" + itemBase.id + ")</h3>";
+            // tslint:disable-next-line: no-floating-promises
+            Promise.all([itemBaseDef, itemDataDef, resourcesDef]).then(responses => {
+              const [itemBase, itemDataRaw, resources] = responses;
+
+              // Create item and data sections
+              let html =
+                "<h3>" +
+                itemBase.type +
+                ' "' +
+                itemBase.title +
+                '" (<a href="' +
+                defaultPortalUrl +
+                "/home/item.html?id=" +
+                itemBase.id +
+                '" target="_blank">' +
+                itemBase.id +
+                "</a>)</h3>";
 
               html +=
-                '<table style="width:100%"><tr>' +
-                '<td><a href="' + defaultPortalSharingUrl + '/rest/content/items/' + itemBase.id +
-                '?f=json" target="_blank">Item Json</a></td>' +
-                '<td><a href="' + defaultPortalSharingUrl + '/rest/content/items/' + itemBase.id +
-                '/data?f=json" target="_blank">Data Json</a></td>' +
-                "</tr><tr>" +
-                '<td><textarea rows="10" style="width:99%;font-size:x-small">' +
+                '<div style="width:48%;display:inline-block;">Item</div>' +
+                '<div style="width:2%;display:inline-block;"></div>' +
+                '<div style="width:48%;display:inline-block;">Data</div>' +
+                '<div style="width:48%;display:inline-block;"><textarea rows="10" style="width:99%;font-size:x-small">' +
                 JSON.stringify(itemBase, null, 2) +
-                "</textarea></td>" +
-                '<td><textarea rows="10" style="width:99%;font-size:x-small">' +
-                JSON.stringify(itemData, null, 2) +
-                "</textarea></td>" +
-                "</tr></table>";
+                "</textarea></div>" +
+                '<div style="width:2%;display:inline-block;"></div>' +
+                '<div id="dataSection" style="width:48%;display:inline-block;vertical-align: top;">';
+
+              if (itemDataRaw) {
+                const itemType = itemBase.type.toLowerCase();
+                switch (itemType) {
+                  case "arcgis pro add in":
+                  case "code sample":
+                  case "csv":
+                  case "dashboard":
+                  case "desktop application template":
+                  case "layer package":
+                  case "microsoft excel":
+                  case "microsoft powerpoint":
+                  case "microsoft word":
+                  case "pdf":
+                    html +=
+                      '<a href="https://arcgis4localgov2.maps.arcgis.com/sharing/rest/content/items/' +
+                      itemId +
+                      '/data" target="_blank">' +
+                      (itemBase.title || itemBase.name) +
+                      "</a>";
+                    break;
+
+                  case "image":
+                    itemDataRaw.blob().then((data) => {
+                      if (data.type === "image/tiff") {
+                        document.getElementById("dataSection").innerHTML =
+                          "<span>TIFF image; size " + data.size + "</span>";
+                      } else {
+                        const objectURL = URL.createObjectURL(data);
+                        document.getElementById("dataSection").innerHTML =
+                          '<img src="' +
+                          objectURL +
+                          '" style="max-width:99%;border:1px solid lightgray;"/>';
+                      }
+                    });
+                    break;
+
+                  case "feature service":
+                  case "form":
+                  case "locator":
+                  case "storymap":
+                  case "geojson":
+                  case "tile layer":
+                  case "web map":
+                  case "web mapping application":
+                  case "web scene":
+                    html += // Blob is JSON, so it is converted by default
+                      '<textarea rows="10" style="width:99%;font-size:x-small">' +
+                      (itemDataRaw ? JSON.stringify(itemDataRaw, null, 2) : "") +
+                      "</textarea>";
+                    break;
+
+                  case "document link":
+                  default:
+                    html += "<i>no data</i>";
+                    break;
+                }
+              } else {
+                html += "<i>no data</i>";
+              }
+              html += "</div>";
 
               // Figure out URLs to the resource information
-              const resourceNames = resources.resources.map(
-                resourceDetail => resourceDetail.resource
+              const resourceNames = (resources.resources).map(
+                (resourceDetail) => resourceDetail.resource
               );
               const itemFilePaths = solutionCommon.generateSourceItemFilePaths(
                 defaultPortalSharingUrl,
@@ -123,13 +195,13 @@
               const thumbnailFilePath = itemFilePaths.filter(
                 filePathInfo => filePathInfo.url.indexOf(marker) >= 0
               );
-              const thumbnailName =
-                thumbnailFilePath[0].url.substring(thumbnailFilePath[0].url.indexOf("/info/") + "/info/".length);
+              const thumbnailName = thumbnailFilePath[0].url.substring(
+                thumbnailFilePath[0].url.indexOf("/info/") + "/info/".length
+              );
               html +=
                 '<img src="' +
                 thumbnailFilePath[0].url +
-                '" style="max-width:256px"/> ' +
-                '<a href="' +
+                '" style="max-width:256px;border:1px solid lightgray;"/>&nbsp;&nbsp;<a href="' +
                 thumbnailFilePath[0].url +
                 '" target="_blank">' +
                 thumbnailName +
@@ -143,23 +215,20 @@
                 filePathInfo => filePathInfo.url.indexOf(marker) >= 0
               );
               html += '<div id="metadataOutput"></div>';
-              const requestOptionsNonJson = {
-                ...requestOptions,
-                params: {
-                  f: "text"
-                }
-              };
-              request.request(metadataFilePath[0].url, requestOptionsNonJson).then(
-                metadata => {
-                  document.getElementById("metadataOutput").innerHTML =
-                    '<textarea rows="10" style="width:99%;font-size:x-small">' +
-                    metadata +
-                    "</textarea>";
-                },
-                () => {
-                  document.getElementById("metadataOutput").innerHTML = "<i>no metadata</i>"
-                }
-              );
+              // tslint:disable-next-line: no-floating-promises
+              solutionCommon
+                .getText(metadataFilePath[0].url, destinationUserSession)
+                .then(metadata => {
+                  if (metadata) {
+                    document.getElementById("metadataOutput").innerHTML =
+                      '<textarea rows="10" style="width:99%;font-size:x-small">' +
+                      metadata +
+                      "</textarea>";
+                  } else {
+                    document.getElementById("metadataOutput").innerHTML =
+                      "<i>no metadata</i>";
+                  }
+                });
               html += "</p>";
 
               // Fetch the remaining resources, assuming that they're images for now
@@ -168,26 +237,31 @@
               const resourceFilePaths = itemFilePaths.filter(
                 filePathInfo => filePathInfo.url.indexOf(marker) >= 0
               );
-              resourceFilePaths.forEach(
-                filePathInfo => {
-                  const name = filePathInfo.url.substr(filePathInfo.url.indexOf(marker) + marker.length);
+              if (resourceFilePaths.length === 0) {
+                html += "<p><i>no resources</i></p>";
+              } else {
+                resourceFilePaths.forEach(filePathInfo => {
+                  const name = filePathInfo.url.substr(
+                    filePathInfo.url.indexOf(marker) + marker.length
+                  );
                   html +=
-                    '<img src="' +
+                    '<p><img src="' +
                     filePathInfo.url +
-                    '" style="max-width:256px"/> ' +
-                    '<a href="' +
+                    '" style="max-width:256px"/>&nbsp;&nbsp;<a href="' +
                     filePathInfo.url +
                     '" target="_blank">' +
                     name +
-                    "</a><br/>";
-                }
-              );
+                    "</a></p>";
+                });
+              }
               html += "</p>";
 
-              document.getElementById("output").innerHTML = html;
-            }
-          );
+              resolve(html);
+            });
+          });
         }
+        //------------------------------------------------------------------------------------------------------------//
+
       });
   </script>
 </body>
