--- a/packages/common/examples/convertExtent/JavaScript/index.html
+++ b/packages/common/examples/convertExtent/JavaScript/index.html
@@ -39,9 +39,9 @@
 
     require.config({
       paths: {
-        "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.3.0/dist/umd/auth.umd.min",
-        "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.3.0/dist/umd/portal.umd.min",
-        "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.3.0/dist/umd/request.umd.min",
+        "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.4.0/dist/umd/auth.umd.min",
+        "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.4.0/dist/umd/portal.umd.min",
+        "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.4.0/dist/umd/request.umd.min",
         "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.0/dist/umd/common.umd.min"
       }
     });
@@ -59,10 +59,9 @@
 
           var usOptions = {};
           var destinationUserSession = new auth.UserSession(usOptions);
-          var requestOptions = { authentication: destinationUserSession };
 
           // Get the extents of a portal
-          portal.getPortal(portalId, requestOptions)
+          portal.getPortal(portalId, { authentication: destinationUserSession })
             .then(function (portalResponse) {
               var portalExtent = portalResponse.defaultExtent;
               let html = "";
@@ -79,7 +78,7 @@
                 "http://sampleserver6.arcgisonline.com/arcgis/rest/services/Utilities/Geometry/GeometryServer";
               // tslint:disable-next-line: no-floating-promises
               solutionCommon
-                .convertExtent(portalExtent, outSR, geometryServiceUrl, requestOptions)
+                .convertExtent(portalExtent, outSR, geometryServiceUrl, destinationUserSession)
                 .then(conversionResponse => {
                   html += "<h4>Projected extents</h4>";
                   html += "<pre>" + JSON.stringify(conversionResponse, null, 4) + "</pre>";
