--- a/packages/common/examples/convertExtent/JavaScriptLocal/index.html
+++ b/packages/common/examples/convertExtent/JavaScriptLocal/index.html
@@ -43,7 +43,7 @@
         "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.4.0/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.4.0/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.4.0/dist/umd/request.umd.min",
-        "@esri/solution-common": package_path + "/lib/common.umd"
+        "@esri/solution-common": package_path + "/lib/common.umd.min"
       }
     });
 
