--- a/packages/common/examples/getItemInfo/TypeScript/index.html
+++ b/packages/common/examples/getItemInfo/TypeScript/index.html
@@ -29,8 +29,12 @@
 </head>
 <body>
   <div id="input" style="display:none">
-    <label for="id">ID of the item to be fetched:</label>
-    <input type="text" id="id" style="width:256px">
+    <label for="id">ID of the item to be fetched:</label><input type="text" id="id" style="width:256px">
+    <br /><br />
+    <i>For private items or info:</i><br />
+    <label for="username">username:</label><input type="text" id="username">
+    <label for="password">password:</label><input type="password" id="password">
+    <br /><br />
     <button onclick="goFcn()">Go</button>
   </div>
   <div id="output" style="display:none">Fetching...</div>
@@ -60,7 +64,10 @@
 
           main.getItemInfo(
             document.getElementById("id").value,
-            new auth.UserSession({})
+            new auth.UserSession({
+              username: document.getElementById("username").value,
+              password: document.getElementById("password").value
+            })
           ).then(
             html => {
               document.getElementById("output").innerHTML = html;
