--- a/packages/common/examples/copyItemInfo/TypeScript/index.html
+++ b/packages/common/examples/copyItemInfo/TypeScript/index.html
@@ -33,7 +33,8 @@
         "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request/dist/umd/request.umd.min",
-        "src": window.location + "src",
+        "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.7/dist/umd/common.umd.min",
+        "src": window.location + "src"
       }
     };
   </script>
