--- a/packages/common/examples/convertExtent/TypeScript/index.html
+++ b/packages/common/examples/convertExtent/TypeScript/index.html
@@ -42,7 +42,7 @@
         "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.6.0/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.6.0/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.6.0/dist/umd/request.umd.min",
-        "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.7/dist/umd/common.umd.min"
+        "@esri/solution-common": "https://unpkg.com/@esri/solution-common"
       }
     });
 
