--- a/packages/common/examples/getItemInfo/index.html
+++ b/packages/common/examples/getItemInfo/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>@esri/solution-common createExtent TypeScript example</title>
+  <title>@esri/solution-common getItemInfo TypeScript example</title>
   <!--
    | Copyright 2019 Esri
    |
@@ -22,14 +22,20 @@
   button {
     cursor: pointer;
   }
+  td {
+    border: none;
+  }
   </style>
 </head>
 <body>
   <div id="input" style="display:none">
-    <label for="id">ID of the portal whose default extents are to be converted:</label>
-    <input type="text" id="id" style="width:256px">
+    <label for="id">ID of the item to be fetched:</label><input type="text" id="id" style="width:256px">
+    <br /><br />
+    <i>For private items or info:</i><br />
+    <label for="username">username:</label><input type="text" id="username">
+    <label for="password">password:</label><input type="password" id="password">
+    <br /><br />
     <button onclick="goFcn()">Go</button>
-    <br/><i>Leave empty for default extents</i>
   </div>
   <div id="output" style="display:none">Fetching...</div>
 
@@ -42,12 +48,12 @@
         "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.6.0/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.6.0/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.6.0/dist/umd/request.umd.min",
-        "@esri/solution-common": "https://unpkg.com/@esri/solution-common"
+        "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.8/dist/umd/common.umd.min"
       }
     });
 
-    require(["src/main"],
-      function (main) {
+    require(["@esri/arcgis-rest-auth", "src/main"],
+      function (auth, main) {
         "use strict";
         goFcn = go;
         document.getElementById("input").style.display = "block";
@@ -56,13 +62,23 @@
           document.getElementById("input").style.display = "none";
           document.getElementById("output").style.display = "block";
 
-          main.convertPortalExtents(document.getElementById("id").value).then(
+          main.getItemInfo(
+            document.getElementById("id").value,
+            new auth.UserSession({
+              username: document.getElementById("username").value,
+              password: document.getElementById("password").value
+            })
+          ).then(
             html => {
               document.getElementById("output").innerHTML = html;
+            },
+            error => {
+              document.getElementById("output").innerHTML = "<span style=\"color:red\">" + error + "</span>";
             }
           );
         }
-      });
+      }
+    );
   </script>
 </body>
 </html>
