--- a/packages/creator/examples/createSolutionFromGroup/index.html
+++ b/packages/creator/examples/createSolutionFromGroup/index.html
@@ -48,11 +48,10 @@
         "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.6.0/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.6.0/dist/umd/request.umd.min",
-        "@esri/solution-common": "node_modules/@esri/solution-common/dist/umd/common.umd.min",
-        "@esri/solution-creator": "node_modules/@esri/solution-creator/dist/umd/creator.umd.min",
-        //"@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.8/dist/umd/common.umd.min",
-        //"@esri/solution-creator": "https://unpkg.com/@esri/solution-creator@0.5.8/dist/umd/creator.umd.min",
+        "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.8/dist/umd/common.umd.min",
+        "@esri/solution-creator": "https://unpkg.com/@esri/solution-creator@0.5.8/dist/umd/creator.umd.min",
         "@esri/solution-feature-layer": "https://unpkg.com/@esri/solution-feature-layer@0.5.8/dist/umd/feature-layer.umd.min",
+        "@esri/solution-group": "https://unpkg.com/@esri/solution-group@0.5.8/dist/umd/group.umd.min",
         "@esri/solution-simple-types": "https://unpkg.com/@esri/solution-simple-types@0.5.8/dist/umd/simple-types.umd.min"
       }
     });
