--- a/packages/creator/examples/createSolutionFromItem/index.html
+++ b/packages/creator/examples/createSolutionFromItem/index.html
@@ -51,6 +51,7 @@
         "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.5.8/dist/umd/common.umd.min",
         "@esri/solution-creator": "https://unpkg.com/@esri/solution-creator@0.5.8/dist/umd/creator.umd.min",
         "@esri/solution-feature-layer": "https://unpkg.com/@esri/solution-feature-layer@0.5.8/dist/umd/feature-layer.umd.min",
+        "@esri/solution-group": "https://unpkg.com/@esri/solution-group@0.5.8/dist/umd/group.umd.min",
         "@esri/solution-simple-types": "https://unpkg.com/@esri/solution-simple-types@0.5.8/dist/umd/simple-types.umd.min"
       }
     });
