--- a/packages/deployer/examples/deploySolution/index.html
+++ b/packages/deployer/examples/deploySolution/index.html
@@ -40,7 +40,7 @@
     <br /><br />
     <button onclick="goFcn()">Go</button>
   </div>
-  <div id="output" style="display:none">Fetching...</div>
+  <div id="output" style="display:none">Deploying...</div>
 
   <script src="lib/require.js"></script>
   <script>
