--- a/packages/common/examples/copyItemInfo/index.html
+++ b/packages/common/examples/copyItemInfo/index.html
@@ -30,9 +30,11 @@
   <script>
     var dojoConfig = {
       "paths": {
-        "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
-        "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
-        "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request/dist/umd/request.umd.min",
+        "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.7.1/dist/umd/auth.umd.min",
+        "@esri/arcgis-rest-feature-layer": "https://unpkg.com/@esri/arcgis-rest-feature-layer@2.7.1/dist/umd/feature-layer.umd.min",
+        "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.7.1/dist/umd/portal.umd.min",
+        "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.7.1/dist/umd/request.umd.min",
+        "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.7.1/dist/umd/service-admin.umd.min",
         "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.6.0/dist/umd/common.umd.min",
         "src": window.location + "src"
       }
