Combined create solution examples and minor example UI improvements

--- a/packages/common/examples/copyItemInfo/index.html
+++ b/packages/common/examples/copyItemInfo/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <div id="input" style="display:none">
-    <label for="id">ID of the item to be copied:</label><input type="text" id="id" style="width:256px">
+    <label for="id">ID of the item to be copied:&nbsp;</label><input type="text" id="id" style="width:256px">
 
     <button onclick="goFcn()">Go</button>
   </div>
