--- a/packages/common/examples/convertExtent/index.html
+++ b/packages/common/examples/convertExtent/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div id="input" style="display:none">
-    <label for="id">ID of the portal whose default extents are to be converted:</label>
+    <label for="id">ID of the portal whose default extents are to be converted:&nbsp;</label>
     <input type="text" id="id" style="width:256px">
     <button onclick="goFcn()">Go</button>
     <br/><i>Leave empty for default extents</i>
