--- a/packages/common/examples/getItemInfo/index.html
+++ b/packages/common/examples/getItemInfo/index.html
@@ -32,11 +32,11 @@
 </head>
 <body>
   <div id="input" style="display:none">
-    <label for="id">ID of the item to be fetched:</label><input type="text" id="id" style="width:256px">
+    <label for="id">ID of the item to be fetched:&nbsp;</label><input type="text" id="id" style="width:256px">
     <br /><br />
     <i>For private items or info:</i><br />
-    <label for="username">username:</label><input type="text" id="username">
-    <label for="password">password:</label><input type="password" id="password">
+    <label for="username">username:&nbsp;</label><input type="text" id="username">
+    <label for="password">password:&nbsp;</label><input type="password" id="password">
     <br /><br />
     <button onclick="goFcn()">Go</button>
   </div>
