--- a/packages/creator/examples/createSolution/index.html
+++ b/packages/creator/examples/createSolution/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>@esri/solution-creator createSolutionFromGroup TypeScript example</title>
+  <title>@esri/solution-creator createSolution TypeScript example</title>
   <!--
    | Copyright 2019 Esri
    |
@@ -32,11 +32,11 @@
 </head>
 <body>
   <div id="input" style="display:none">
-    <label for="id">ID of the group to be put into a solution</label><input type="text" id="id" style="width:256px">
+    <label for="id">ID of the group or item to be put into a solution:&nbsp;</label><input type="text" id="id" style="width:256px">
     <br /><br />
     <i>Credentials in destination organization:</i><br />
-    <label for="username">username:</label><input type="text" id="username">
-    <label for="password">password:</label><input type="password" id="password">
+    <label for="username">username:&nbsp;</label><input type="text" id="username">
+    <label for="password">password:&nbsp;</label><input type="password" id="password">
     <br /><br />
     <button onclick="goFcn()">Go</button>
   </div>
@@ -72,8 +72,9 @@
         function go () {
           document.getElementById("input").style.display = "none";
           document.getElementById("output").style.display = "block";
+          var startTime = Date.now();
 
-          main.createSolutionFromGroup(
+          main.createSolution(
             document.getElementById("id").value,
             new auth.UserSession({
               username: document.getElementById("username").value,
@@ -84,12 +85,29 @@
             }
           ).then(
             html => {
+              reportElapsedTime(startTime);
               document.getElementById("output").innerHTML = html;
             },
             error => {
-              document.getElementById("output").innerHTML = "<span style=\"color:red\">" + error + "</span>";
+              var message = error.error || JSON.stringify(error);
+              if (error.itemIds) {
+                message += "<ul>";
+                error.itemIds.forEach(
+                  itemId => {
+                    message += "<li>" + itemId + "</li>";
+                  }
+                );
+                message += "</ul>";
+              }
+              reportElapsedTime(startTime);
+              document.getElementById("output").innerHTML = "<span style=\"color:red\">" + message + "</span>";
             }
           );
+        }
+
+        function reportElapsedTime (startTime) {
+          var endTime = Date.now();
+          console.log("Elapsed time: " + ((endTime - startTime) / 1000).toFixed(1) + " seconds");
         }
       }
     );
