Removed old tag and standardized solution.js sources for examples

--- a/packages/deployer/examples/deploySolution/index.html
+++ b/packages/deployer/examples/deploySolution/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>@esri/solution-deployer deploySolution TypeScript example</title>
+  <title>@esri/solution-deployer deploySolution example</title>
   <!--
    | Copyright 2019 Esri
    |
@@ -53,6 +53,7 @@
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.9.0/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.9.0/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.9.0/dist/umd/service-admin.umd.min",
+
         "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.8.1/dist/umd/common.umd.min",
         "@esri/solution-deployer": "https://unpkg.com/@esri/solution-deployer@0.8.1/dist/umd/deployer.umd.min",
         "@esri/solution-feature-layer": "https://unpkg.com/@esri/solution-feature-layer@0.8.1/dist/umd/feature-layer.umd.min",
