--- a/packages/common/examples/copySolutions/index.html
+++ b/packages/common/examples/copySolutions/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>@esri/solution-common copySolutions TypeScript example</title>
+  <title>@esri/solution-common copySolutions example</title>
   <!--
    | Copyright 2019 Esri
    |
@@ -57,6 +57,7 @@
   }
   </style>
   <script>
+    var package_path = window.location.pathname.substring(0, window.location.pathname.lastIndexOf('/'));
     var dojoConfig = {
       "paths": {
         "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.9.0/dist/umd/auth.umd.min",
@@ -64,8 +65,10 @@
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.9.0/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.9.0/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.9.0/dist/umd/service-admin.umd.min",
+
         "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.8.1/dist/umd/common.umd.min",
-        "src": window.location + "src"
+
+        "src": package_path + "/src"
       }
     };
   </script>
